# vertelt-bot

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GNUmakefile  LICENSE  OPERATIONS.md  README.md  SECURITY.md  amalgamate.py  docker-compose.yml
.agent/: ARCHITECTURE.md  mcp_config.json
.agent/agents/: backend-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  orchestrator.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  seo-specialist.md  test-engineer.md
.agent/rules/: GEMINI.md
.agent/scripts/: auto_preview.py  checklist.py  session_manager.py  verify_all.py
.agent/skills/: README.md  doc.md
.agent/skills/3d-web-experience/: SKILL.md
.agent/skills/SPDD/: 1-research.md  2-spec.md  3-implementation.md
.agent/skills/ab-test-setup/: SKILL.md
.agent/skills/accessibility-compliance-accessibility-audit/: SKILL.md
.agent/skills/active-directory-attacks/: SKILL.md
.agent/skills/activecampaign-automation/: SKILL.md
.agent/skills/address-github-comments/: SKILL.md
.agent/skills/agent-evaluation/: SKILL.md
.agent/skills/agent-framework-azure-ai-py/: SKILL.md
.agent/skills/agent-manager-skill/: SKILL.md
.agent/skills/agent-memory-mcp/: SKILL.md
.agent/skills/agent-memory-systems/: SKILL.md
.agent/skills/agent-orchestration-improve-agent/: SKILL.md
.agent/skills/agent-orchestration-multi-agent-optimize/: SKILL.md
.agent/skills/agent-tool-builder/: SKILL.md
.agent/skills/agents-v2-py/: SKILL.md
.agent/skills/ai-agents-architect/: SKILL.md
.agent/skills/ai-engineer/: SKILL.md
.agent/skills/ai-product/: SKILL.md
.agent/skills/ai-wrapper-product/: SKILL.md
.agent/skills/airflow-dag-patterns/: SKILL.md
.agent/skills/airtable-automation/: SKILL.md
.agent/skills/algolia-search/: SKILL.md
.agent/skills/amplitude-automation/: SKILL.md
.agent/skills/analytics-tracking/: SKILL.md
.agent/skills/angular/: README.md  SKILL.md  metadata.json
.agent/skills/angular-best-practices/: README.md  SKILL.md  metadata.json
.agent/skills/angular-migration/: SKILL.md
.agent/skills/angular-state-management/: README.md  SKILL.md  metadata.json
.agent/skills/angular-ui-patterns/: README.md  SKILL.md  metadata.json
.agent/skills/anti-reversing-techniques/: SKILL.md
.agent/skills/antigravity-workflows/: SKILL.md
.agent/skills/api-design-principles/: SKILL.md
.agent/skills/api-documentation-generator/: SKILL.md
.agent/skills/api-documenter/: SKILL.md
.agent/skills/api-fuzzing-bug-bounty/: SKILL.md
.agent/skills/api-patterns/: SKILL.md  api-style.md  auth.md  documentation.md  graphql.md  rate-limiting.md  response.md  rest.md  security-testing.md  trpc.md  versioning.md
.agent/skills/api-security-best-practices/: SKILL.md
.agent/skills/api-testing-observability-api-mock/: SKILL.md
.agent/skills/app-builder/: SKILL.md  agent-coordination.md  feature-building.md  project-detection.md  scaffolding.md  tech-stack.md
.agent/skills/app-store-optimization/: HOW_TO_USE.md  README.md  SKILL.md  ab_test_planner.py  aso_scorer.py  competitor_analyzer.py  expected_output.json  keyword_analyzer.py  launch_checklist.py  localization_helper.py  metadata_optimizer.py  review_analyzer.py  sample_input.json
.agent/skills/application-performance-performance-optimization/: SKILL.md
.agent/skills/architect-review/: SKILL.md
.agent/skills/architecture/: SKILL.md  context-discovery.md  examples.md  pattern-selection.md  patterns-reference.md  trade-off-analysis.md
.agent/skills/architecture-decision-records/: SKILL.md
.agent/skills/architecture-patterns/: SKILL.md
.agent/skills/arm-cortex-expert/: SKILL.md
.agent/skills/asana-automation/: SKILL.md
.agent/skills/async-python-patterns/: SKILL.md
.agent/skills/attack-tree-construction/: SKILL.md
.agent/skills/audio-transcriber/: CHANGELOG.md  README.md  SKILL.md
.agent/skills/auth-implementation-patterns/: SKILL.md
.agent/skills/automate-whatsapp/: SKILL.md
.agent/skills/autonomous-agent-patterns/: SKILL.md
.agent/skills/autonomous-agents/: SKILL.md
.agent/skills/avalonia-layout-zafiro/: SKILL.md  behaviors.md  components.md  containers.md  icons.md  themes.md
.agent/skills/avalonia-viewmodels-zafiro/: SKILL.md  composition.md  navigation_sections.md  viewmodels.md  wizards.md
.agent/skills/avalonia-zafiro-development/: SKILL.md  avalonia-reactive-rules.md  core-technical-skills.md  naming-standards.md  patterns.md  zafiro-shortcuts.md
.agent/skills/aws-penetration-testing/: SKILL.md
.agent/skills/aws-serverless/: SKILL.md
.agent/skills/aws-skills/: SKILL.md
.agent/skills/azd-deployment/: SKILL.md
.agent/skills/azure-ai-agents-persistent-dotnet/: SKILL.md
.agent/skills/azure-ai-agents-persistent-java/: SKILL.md
.agent/skills/azure-ai-anomalydetector-java/: SKILL.md
.agent/skills/azure-ai-contentsafety-java/: SKILL.md
.agent/skills/azure-ai-contentsafety-py/: SKILL.md
.agent/skills/azure-ai-contentsafety-ts/: SKILL.md
.agent/skills/azure-ai-contentunderstanding-py/: SKILL.md
.agent/workflows/: brainstorm.md  create.md  debug.md  deploy.md  enhance.md  orchestrate.md  plan.md  preview.md  status.md  test.md  ui-ux-pro-max.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
adapters/src/: telegram_client.cpp
app/: main.cpp
cmake/: vertel.pc.in  vertelConfig.cmake.in  vertel_version.h.in
core/src/: bot_service.cpp
deploy/: vertel-bot.service
docs/: ADR-0001.md  ARCHITECTURE.md  CONSUMING.md  RFC-0001.md  ROADMAP.md
examples/basic_bot/: main.cpp
platform/src/: config.cpp
runtime/src/: health_server.cpp  logger.cpp  retry_policy.cpp  shutdown.cpp
tests/: test_bot_service.cpp
(+2492 files in other folders)
